[Chore]: Bug Padding on mobile landing page

--- a/assest/css/contact.css
+++ b/assest/css/contact.css
@@ -31,6 +31,7 @@
   text-align: justify;
   color: #f9f9f9;
   text-align: center;
+  white-space: nowrap;
 }
 
 .contact-form {
